--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://s3.eu-central-1.amazonaws.com/ly2015-fst-test-bucket-2/calc/index.html">
     <title>Document</title>
 </head>
 <body>
