--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <script src="script.js"></script><noscript>turn on js in your browser settings or this calculator will not work</noscript>
 </body>
 </html>
